// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedFieldList useGroupedFields() should work correctly for no data 1`] = `
Object {
  "AvailableFields": Object {
    "defaultNoFieldsMessage": "No available fields containing data.",
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Available fields",
  },
  "EmptyFields": Object {
    "defaultNoFieldsMessage": "There are no empty fields.",
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that don't have any values based on your filters.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Empty fields",
  },
  "MetaFields": Object {
    "defaultNoFieldsMessage": "There are no meta fields.",
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": false,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Meta fields",
  },
  "PopularFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that your organization frequently uses, from most to least popular.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Popular fields",
  },
  "SelectedFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Selected fields",
  },
  "SmartFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Smart fields",
  },
  "SpecialFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": false,
    "title": "",
  },
  "UnmappedFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that aren't explicitly mapped to a field data type.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Unmapped fields",
  },
}
`;

exports[`UnifiedFieldList useGroupedFields() should work correctly in loading state 1`] = `
Object {
  "AvailableFields": Object {
    "defaultNoFieldsMessage": "No available fields containing data.",
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Available fields",
  },
  "EmptyFields": Object {
    "defaultNoFieldsMessage": "There are no empty fields.",
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that don't have any values based on your filters.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Empty fields",
  },
  "MetaFields": Object {
    "defaultNoFieldsMessage": "There are no meta fields.",
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": false,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Meta fields",
  },
  "PopularFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that your organization frequently uses, from most to least popular.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Popular fields",
  },
  "SelectedFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Selected fields",
  },
  "SmartFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Smart fields",
  },
  "SpecialFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": false,
    "title": "",
  },
  "UnmappedFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that aren't explicitly mapped to a field data type.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Unmapped fields",
  },
}
`;

exports[`UnifiedFieldList useGroupedFields() should work correctly when global filters are set 1`] = `
Object {
  "AvailableFields": Object {
    "defaultNoFieldsMessage": "No available fields containing data.",
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "isAffectedByGlobalFilter": true,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Available fields",
  },
  "EmptyFields": Object {
    "defaultNoFieldsMessage": "There are no empty fields.",
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that don't have any values based on your filters.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Empty fields",
  },
  "MetaFields": Object {
    "defaultNoFieldsMessage": "There are no meta fields.",
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": false,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Meta fields",
  },
  "PopularFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that your organization frequently uses, from most to least popular.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": true,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Popular fields",
  },
  "SelectedFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": true,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Selected fields",
  },
  "SmartFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": true,
    "showInAccordion": true,
    "title": "Smart fields",
  },
  "SpecialFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "hideDetails": true,
    "isAffectedByGlobalFilter": false,
    "isAffectedByTimeFilter": false,
    "isInitiallyOpen": false,
    "showInAccordion": false,
    "title": "",
  },
  "UnmappedFields": Object {
    "fieldCount": 0,
    "fields": Array [],
    "helpText": "Fields that aren't explicitly mapped to a field data type.",
    "hideDetails": false,
    "hideIfEmpty": true,
    "isAffectedByGlobalFilter": true,
    "isAffectedByTimeFilter": true,
    "isInitiallyOpen": false,
    "showInAccordion": true,
    "title": "Unmapped fields",
  },
}
`;
